--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 
 <body>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+  <button id="play-pause">press to start</button>
   <canvas id="game-of-life-canvas"></canvas>
   <script src="./bootstrap.js"></script>
 </body>
