--- a/www/index.html
+++ b/www/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hello wasm-pack!</title>
+    <style>
+      body,
+      html {
+        padding: 0;
+        margin: 0;
+      }
+      body {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Hello wasm-pack!</title>
-  <style>
-    body,html{
-      padding: 0;
-      margin: 0;
-    }
-    body {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-  </style>
-</head>
-
-<body>
-  <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-  <button id="play-pause">press to start</button>
-  <canvas id="game-of-life-canvas"></canvas>
-  <script src="./bootstrap.js"></script>
-  <input type="range" id="rangeipt"  value="10"  max="10" min="1">
-</body>
-
+  <body>
+    <noscript
+      >This page contains webassembly and javascript content, please enable
+      javascript in your browser.</noscript
+    >
+    <button id="play-pause">press to start</button>
+    <button id="next-step">next</button>
+    <button id="boom">destory</button>
+    <canvas id="game-of-life-canvas"></canvas>
+    <script src="./bootstrap.js"></script>
+    <input type="range" id="rangeipt" value="10" max="10" min="1" />
+  </body>
 </html>
