--- a/www/index.html
+++ b/www/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello wasm-pack!</title>
+    <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css" />
     <style>
+      @font-face {
+        font-family: "Press Start 2P";
+        src: url("./font/PressStart2P-Regular.ttf");
+      }
       body,
       html {
         padding: 0;
         margin: 0;
+        font-family: "Press Start 2P";
       }
       body {
         position: absolute;
@@ -20,6 +26,10 @@
         align-items: center;
         justify-content: center;
       }
+      #fps {
+        white-space: pre;
+        font-family: monospace;
+      }
     </style>
   </head>
 
@@ -28,9 +38,15 @@
       >This page contains webassembly and javascript content, please enable
       javascript in your browser.</noscript
     >
-    <button id="play-pause">press to start</button>
-    <button id="next-step">next</button>
-    <button id="boom">destory</button>
+    <!-- <div id="fps"></div> -->
+    <div class="nes-container with-title is-centered">
+      <p class="title">Frames per Second:</p>
+      <p id="fps"></p>
+    </div>
+    <button id="play-pause" class="nes-btn is-primary">press to start</button>
+    <button id="next-step" class="nes-btn">next</button>
+    <button id="reset" class="nes-btn is-success">reset</button>
+    <button id="boom" type="button" class="nes-btn is-error">destory</button>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
     <input type="range" id="rangeipt" value="10" max="10" min="1" />
