--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Hello wasm-pack!</title>
-    <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css" />
+    <!-- <link rel="stylesheet" href="./static/css/nes.min.css" /> -->
     <style>
       @font-face {
         font-family: "Press Start 2P";
