:new: add generate template fn

--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Hello wasm-pack!</title>
     <!-- <link rel="stylesheet" href="./static/css/nes.min.css" /> -->
-    <link href="./index.css" />
+    <!-- <link href="./index.css" /> -->
   </head>
 
   <body>
